# chatglm-6b-api

./: .gitignore  README.md  gunicorn.conf.py  llm.py  main.py  pyproject.toml
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: chat.py  embeddings.py  models.py  utils.py
app/core/: config.py
app/llm/: __init__.py  llm.py
app/schemas/: __init__.py  chat_completion.py  request.py  response.py
app/schemas/config/: __init__.py  base.py
app/schemas/message/: base.py
app/schemas/response/: __init__.py
app/schemas/response/chatcompletion/: __init__.py
app/schemas/response/embeddings/: __init__.py  base.py
app/schemas/response/models/: __init__.py  base.py
config/: config.example.yaml
