[tool.poetry]
name = "chatglm-6b-api"
version = "0.1.0"
description = ""
authors = ["XingKaiXin <xingkaixin@gmail.com>"]
readme = "README.md"
packages = [{include = "chatglm_6b_api"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
